--- a/BIZspot-frontend/src/app/signup/signup.component.html
+++ b/BIZspot-frontend/src/app/signup/signup.component.html
@@ -15,8 +15,9 @@
 		<div class="row signup-container">
 			<h1 class="signup-heading">Sign Up</h1>
 			<form [formGroup]="signupForm" (submit)="onSubmit()">
-				<input type="text" value="" placeholder="First Name" class="signin-input signin-input-1_2" formControlName="firstName">
-				<input type="text" value="" placeholder="Last Name"class="signin-input signin-input-1_2" formControlName="lastName">
+				<input type="text" value="" placeholder="First Name" class="signin-input signin-input-1_2" formControlName="fname">
+				<input type="text" value="" placeholder="Last Name"class="signin-input signin-input-1_2" formControlName="lname">
+				<input type="number" value="" placeholder="Age" class="signin-input signin-input-1_2" formControlName="age">
 				<input type="email" value="" placeholder="foulen.benfalten@host"class="signin-input" formControlName="email">
 				<input type="password" value="" placeholder="********"class="signin-input" formControlName="password">
 				<input type="text" rows="5" placeholder="Describe yourself" class="signin-input" formControlName="description">
