user can update his data and related minor changes

--- a/BIZspot-frontend/src/app/profile/profile.component.html
+++ b/BIZspot-frontend/src/app/profile/profile.component.html
@@ -18,7 +18,7 @@
 				<input type="text" class="signin-input" placeholder="First Name" formControlName="fname" value="{{currentUser?.fname}}">
 				<input type="text" class="signin-input" placeholder="Family Name" formControlName="lname" value="{{currentUser?.lname}}">
 				<input type="age" class="signin-input" placeholder="Age" formControlName="age" value="{{currentUser?.age}}">
-				<input type="text" class="signin-input" placeholder="Old password" formControlName="oldPassword">
+				<input type="password" class="signin-input" placeholder="Old password" formControlName="oldPassword" value="{{currentUser?.password}}">
 				<input type="password" class="signin-input" placeholder="New password" formControlName="newPassword">
 
 				<input type="submit" class="btn btn--green signup-button" value="Save Changes!">
