Full Business Creation

--- a/BIZspot-frontend/src/app/app.component.html
+++ b/BIZspot-frontend/src/app/app.component.html
@@ -1,1 +1,8 @@
+<!-- <agm-map [latitude]="latitude" [longitude]="longitude" (mapClick)="onChooseLocation($event)">
+    <agm-marker 
+    [latitude]="latitude" 
+    [longitude]="longitude"
+    *ngIf="locationChosen">
+    </agm-marker>
+</agm-map> -->
 <router-outlet></router-outlet>
