--- a/BIZspot-frontend/src/app/subscriptions-list/subscriptions-list.component.html
+++ b/BIZspot-frontend/src/app/subscriptions-list/subscriptions-list.component.html
@@ -1,8 +1,3 @@
-<main class="row">
-	<app-subscription></app-subscription>
-	<app-subscription></app-subscription>
-	<app-subscription></app-subscription>
-	<app-subscription></app-subscription>
-	<app-subscription></app-subscription>
-	<app-subscription></app-subscription>
+<main *ngFor="let business of this.subscribedBusinesses; let i = index" class="row">
+	<app-subscription [business]="business" [subscriptionId]="this.subscriptionsIds[i]"></app-subscription>
 </main>
