--- a/BIZspot-frontend/src/app/review-list/review-list.component.html
+++ b/BIZspot-frontend/src/app/review-list/review-list.component.html
@@ -1,5 +1,3 @@
-<div class="business-page-reviews-list">
-		<app-review></app-review>
-		<app-review></app-review>
-		<app-review></app-review>
+<div class="business-page-reviews-list" *ngFor="let review of this.reviews">
+		<app-review [review]="review"></app-review>
 </div>
